
file(GLOB test_files "${CMAKE_CURRENT_SOURCE_DIR}/*.cc")
set(UT_DEP_LIBS server-shared)
foreach(file ${test_files})
  get_filename_component(file_name ${file} NAME)
  if(file_name MATCHES "^test.*\\.cc$")
    get_filename_component(test_target ${file_name} NAME_WE)
    add_executable(${test_target} ${file_name})
    target_link_libraries(${test_target}  gtest_main gtest gmock_main gmock ${UT_DEP_LIBS})
    if(ENABLE_GCOV)
      addcoverage(${test_target})
    endif()
    add_test(NAME ${test_target} COMMAND ${test_target})
  endif()
endforeach()